Responded to pull request feedback. Round 2.

--- a/DotNetHowToAutocomplete/DotNetHowToAutocomplete/Views/Home/IndexJavaScript.cshtml
+++ b/DotNetHowToAutocomplete/DotNetHowToAutocomplete/Views/Home/IndexJavaScript.cshtml
@@ -25,8 +25,8 @@
         <h2 class="exampleTitle">Suggestions</h2>
         <div class="exampleText">
             Suggestions provide recommendations of actual results based on what the user has typed so far.  Typically, these are shown in a dropdown below the search box and selecting an option navigates the user directly to what they are looking for instead of having to first go to a search results page and navigate from there.
-            This example uses the <a href="https://docs.microsoft.com/rest/api/searchservice/suggestions">suggest</a> API to retrieve suggestions for a search term.<br /><br />
-            Example: Give "exec" a try in the box below to see what the SUGGEST API returns.
+            This example uses the <a href="https://docs.microsoft.com/rest/api/searchservice/suggestions">Suggest</a> API to retrieve suggestions for a search term.<br /><br />
+            Example: Give "exec" a try in the box below to see what the Suggest API returns.
         </div>
         <br />
         <div class="searchBoxForm">
@@ -135,8 +135,8 @@
     <div class="example">
         <h2 class="exampleTitle">Autocomplete</h2>
         <div class="exampleText">
-            Autocomplete provides terms from the index to complete what the user is currently typing.  Selecting one of the options in the dropdown typically executes the search and takes the user to the results page.  This example uses the <a href="http://aka.ms/AutocompleteAPIReference">autocomplete</a> API to retrieve words that complete the given search term.<br /><br />
-            Example: Give "business a" a try in the box below to see what the AUTOCOMPLETE API returns.
+            Autocomplete provides terms from the index to complete what the user is currently typing.  Selecting one of the options in the dropdown typically executes the search and takes the user to the results page.  This example uses the <a href="http://aka.ms/AutocompleteAPIReference">Autocomplete</a> API to retrieve words that complete the given search term.<br /><br />
+            Example: Give "business a" a try in the box below to see what the Autocomplete API returns.
         </div>
         <br />
         <div class="searchBoxForm">
@@ -204,7 +204,7 @@
         <div class="exampleText">
             Autocomplete and suggestions can work together to enhance the user's search experience.  The search box completes the word current typed using the first autocomplete recommendation returned and suggestions appear in a dropdown below the search box.
             This example uses both the suggest and autocomplete APIs.<br /><br />
-            Example: Give "const" a try in the box below to see what the AUTOCOMPLETE API returns.
+            Example: Give "const" a try in the box below to see what the Suggest and Autocomplete APIs return.
         </div>
         <br />
         <div class="searchBoxForm hide-autocomplete-dropdown">
@@ -301,9 +301,9 @@
     <div class="example">
         <h2 class="exampleTitle">Facets</h2>
         <div class="exampleText">
-            Both suggestions and autocomplete APIs require roundtrip to the Azure Search index to retrieve recommendations.  This can introduce a delay depending on the network speed of the user.  Another technique to consider is using facets to retrieve all unique values for a field and caching them on the client when the application page loads.  This is helpful in situations where you are building a search experience targeting values in a small number of fields.
+            Both suggestions and autocomplete APIs require a roundtrip to the Azure Search index to retrieve recommendations.  This can introduce a delay depending on the network speed of the user.  Another technique to consider is using facets to retrieve all unique values for a field and caching them on the client when the application page loads.  This is helpful in situations where you are building a search experience targeting values in a small number of fields.
             <br /><br />
-            Example: Give "dept" a try in the box below to see what the AUTOCOMPLETE API returns.
+            Example: Give "dept" a try in the box below to see what Facets were returned.
         </div>
         <br />
         <div class="searchBoxForm">
